--- a/readme
+++ b/readme
@@ -7,3 +7,7 @@ nhentai-gen-tag.py will get x number of codes with y tag and save them to a file
 both can be used to get bulk files. For gen.py a sacrificial vpn may be needed as you can be blocked by the website. the other script will not block you unless you try to get a LOT of pages.
 
 Thanks for using this.
+
+Update~
+Can now search for characters as well inonw w/ longer name.
+ 
