--- a/readme
+++ b/readme
@@ -9,5 +9,5 @@ both can be used to get bulk files. For gen.py a sacrificial vpn may be needed a
 Thanks for using this.
 
 Update~
-Can now search for characters as well inonw w/ longer name.
- 
+Can now search for characters as well in one w/ longer name.
+Discord is Sans#7759
