--- a/readme
+++ b/readme
@@ -6,6 +6,8 @@ nhentai-gen-tag.py will get x number of codes with y tag and save them to a file
 
 both can be used to get bulk files. For gen.py a sacrificial vpn may be needed as you can be blocked by the website. the other script will not block you unless you try to get a LOT of pages.
 
+For the tag scraper input tags and characters in the format: 'rem,ram,anal' or it won't work.
+
 Thanks for using this.
 
 Update~
