--- a/readme
+++ b/readme
@@ -1,7 +1,4 @@
-Info~
-
-CURRENTLY BROKEN DUE TO CLOUDFLARE
-looking for bypass at the moment.
+Info
 
 gen.py will find random codes amd save them to a file.
 
@@ -17,3 +14,5 @@ Update~
 Can now search for characters as well in one w/ longer name.
 Discord is Sans#7759
 Now better
+
+there is an extremley small chance that i cconvinced them to remove cloudflare and replace it with something else because it isn't there now :)
