--- a/readme
+++ b/readme
@@ -15,4 +15,4 @@ Can now search for characters as well in one w/ longer name.
 Discord is Sans#7759
 Now better
 
-there is an extremley small chance that i cconvinced them to remove cloudflare and replace it with something else because it isn't there now :)
+possibly broken by cloudflare but works for me.
