--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
+CLONE.PY IS NOT FINISHED! i just realised i was cloning the wrong thing so i will fix it sooner or later
+
 Info
 
 gen.py will find random codes amd save them to a file.
